--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html, body, #root {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    transition: background-color 0.2s ease-in-out;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  transition: background-color 0.2s ease-in-out;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
